--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react-app": "^9.1.2",
+    "browserslist": "^4.14.2",
     "camelcase": "^5.3.1",
+    "caniuse-lite": "^1.0.30001125",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "copy-to-clipboard": "^3.3.1",
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
