--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-dom": "^16.13.1",
     "react-highlight": "^0.12.0",
     "react-router-dom": "^5.2.0",
+    "react.eval": "^1.4.17",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
