--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-color": "^2.18.1",
+    "react-cookies": "^0.1.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
@@ -71,6 +72,7 @@
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "2.3.8",
     "ts-pnp": "1.1.6",
+    "url": "^0.11.0",
     "url-loader": "2.3.0",
     "webpack": "4.42.0",
     "webpack-dev-server": "3.11.0",
