--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "react-highlight": "^0.12.0",
     "react-router-dom": "^5.2.0",
     "react.eval": "^1.4.17",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
